--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
             <div class="d-flex justify-content-center">
                 <span class="text-white col-5 border border-white border-top-0 border-bottom-0 border-start-0 border-end-1">
                     <h3 class="text-secondary text-center">Introduction</h3>
-
+                    <ul class="mx-auto col-6">
+                        <li>Musician, Athlete (sometimes), and avid gamer.</li>
+                        <li>4.0 GPA for AS in Software Engineering.</li>
+                        <li>Best of Tech for 2022 AS Software Engineering Program.</li>
+                    </ul>
                 </span>
                 <span class="text-white col-5 border border-white border-top-0 border-bottom-0 border-start-1 border-end-0">
                     <h3 class="text-secondary text-center">Responsibilities</h3>
