--- a/prototype.html
+++ b/prototype.html
@@ -40,7 +40,7 @@
             <button id="nextButton" class="btn btn-secondary text-white font-weight-bold">NEXT</button>
         </div>
         <div id="carouselImg" class="border border-2 border-secondary">
-            <img src="images/Capstone Wireframe (5)-01.png" alt="First slide" width="100%"/>
+            <img src="images/Capstone Wireframe-01.png" alt="First slide" width="100%"/>
         </div>
         <div class="d-flex justify-content-between my-3">
             <button id="backButton" class="btn btn-info text-white font-weight-bold">Back</button>
@@ -56,7 +56,7 @@
     var imageLabel = document.querySelectorAll(`#imageLabel`);
 
 
-    var images = [[`images/Capstone Wireframe (5)-01.png`, `Login`],[`images/Capstone Wireframe (5)-02.png`, `Home`],[`images/Capstone Wireframe (5)-03.png`, `home`],[`images/Capstone Wireframe (5)-04.png`, `home`],[`images/Capstone Wireframe (5)-05.png`, `home`],[`images/Capstone Wireframe (5)-06.png`, `home`],[`images/Capstone Wireframe (5)-07.png`, `home`],[`images/Capstone Wireframe (5)-08.png`, `home`],[`images/Capstone Wireframe (5)-11.png`, `home`],[`images/Capstone Wireframe (5)-12.png`, `home`],[`images/Capstone Wireframe (5)-13.png`, `home`],[`images/Capstone Wireframe (5)-14.png`, `home`],[`images/Capstone Wireframe (5)-15.png`, `home`],[`images/Capstone Wireframe (5)-16.png`, `home`],[`images/Capstone Wireframe (5)-17.png`, `home`]];
+    var images = [[`images/Capstone Wireframe-01.png`, `Login`],[`images/Capstone Wireframe-02.png`, `Home`],[`images/Capstone Wireframe-03.png`, `Customers`],[`images/Capstone Wireframe-04.png`, `View Work Order`],[`images/Capstone Wireframe-05.png`, `QC Checklist`],[`images/Capstone Wireframe-06.png`, `View Customer`],[`images/Capstone Wireframe-07.png`, `Create Work Order`],[`images/Capstone Wireframe-08.png`, `Edit Customer`],[`images/Capstone Wireframe-11.png`, `Edit Vessel`],[`images/Capstone Wireframe-12.png`, `Add Vessel`],[`images/Capstone Wireframe-13.png`, `Inspection Certificate`],[`images/Capstone Wireframe-14.png`, `Parts Checklist`],[`images/Capstone Wireframe-15.png`, `Inspection Worksheet`]];
 
     console.log(images);
 
