Steve Doc Site Complete

--- a/erd.html
+++ b/erd.html
@@ -29,7 +29,10 @@
                     <a class="nav-link text-secondary active" href="erd.html">ERD</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-secondary" href="finished.html">Result</a>
+                    <a class="nav-link text-secondary" href="finished.html">Presentation</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-secondary" href="project.html">Project</a>
                 </li>
             </ul>
         </nav>
