--- a/project.html
+++ b/project.html
@@ -20,7 +20,7 @@
                 <a class="nav-link text-secondary" href="proposal.html">Proposal</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link text-secondary active" href="prototype.html">Prototype</a>
+                <a class="nav-link text-secondary" href="prototype.html">Prototype</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link text-secondary" href="technicalDesign.html">Technical Design</a>
@@ -32,7 +32,7 @@
                     <a class="nav-link text-secondary" href="finished.html">Presentation</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-secondary" href="project.html">Project</a>
+                    <a class="nav-link text-secondary active" href="project.html">Project</a>
                 </li>
             </ul>
         </nav>
@@ -43,7 +43,7 @@
             <button id="nextButton" class="btn btn-secondary text-white font-weight-bold">NEXT</button>
         </div>
         <div id="carouselImg" class="border border-2 border-secondary">
-            <img src="images/Capstone Wireframe-01.png" alt="First slide" width="100%"/>
+            <img src="images/FinalProjectScreenshots/capstone_1.png" alt="First slide" width="100%"/>
         </div>
         <div class="d-flex justify-content-between my-3">
             <button id="backButton" class="btn btn-info text-white font-weight-bold">Back</button>
@@ -59,7 +59,7 @@
     var imageLabel = document.querySelectorAll(`#imageLabel`);
 
 
-    var images = [[`images/Capstone Wireframe-01.png`, `Login`],[`images/Capstone Wireframe-02.png`, `Home`],[`images/Capstone Wireframe-03.png`, `Customers`],[`images/Capstone Wireframe-04.png`, `View Work Order`],[`images/Capstone Wireframe-05.png`, `QC Checklist`],[`images/Capstone Wireframe-06.png`, `View Customer`],[`images/Capstone Wireframe-07.png`, `Create Work Order`],[`images/Capstone Wireframe-08.png`, `Edit Customer`],[`images/Capstone Wireframe-11.png`, `Edit Vessel`],[`images/Capstone Wireframe-12.png`, `Add Vessel`],[`images/Capstone Wireframe-13.png`, `Inspection Certificate`],[`images/Capstone Wireframe-14.png`, `Parts Checklist`],[`images/Capstone Wireframe-15.png`, `Inspection Worksheet`]];
+    var images = [[`images/FinalProjectScreenshots/capstone_1.png`, `Login`],[`images/FinalProjectScreenshots/capstone_2.png`, `Home`],[`images/FinalProjectScreenshots/capstone_3.png`, `Customers`],[`images/FinalProjectScreenshots/capstone_4.png`, `Edit Customer`],[`images/FinalProjectScreenshots/capstone_5.png`, `Edit/Choose Vessel`],[`images/FinalProjectScreenshots/capstone_6.png`, `Create Work Order`],[`images/FinalProjectScreenshots/capstone_7.png`, `View Work Order`],[`images/FinalProjectScreenshots/capstone_8.png`, `QC Checklist`],[`images/FinalProjectScreenshots/capstone_9.png`, `Parts Checklist`],[`images/FinalProjectScreenshots/capstone_10.png`, `Inspection Worksheet`]];
 
     console.log(images);
 
