Ethan G - Download link and git hub link

--- a/technicalDesign.html
+++ b/technicalDesign.html
@@ -43,6 +43,11 @@
             <img class="border border-secondary border-3 my-2" src="images/LRSE Service Manager Technical Document/LRSE Service Manager Technical Document-3.png" alt="proposal" width="75%"/>
             <img class="border border-secondary border-3 my-2" src="images/LRSE Service Manager Technical Document/LRSE Service Manager Technical Document-4.png" alt="proposal" width="75%"/>
         </div>
+
+        <footer class="border border-white border-top-1 border-bottom-0 border-start-0 border-end-0 d-flex justify-content-around align-items-center">
+            <a href="AS_Capstone.zip" class="text-white" download>Download Zip of Project</a>
+            <a href="#" class="text-white">Go To Git Hub Repo</a>
+        </footer>
     </div>
 </body>
 </html>
