--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
             <div class="d-flex justify-content-center">
                 <span class="text-white col-5 border border-white border-top-0 border-bottom-0 border-start-0 border-end-1">
                     <h3 class="text-secondary text-center">Introduction</h3>
-
+                    <ul class="mx-auto col-6">
+                        <li>Enjoys 3D designing, 3D printing, and programming.</li>
+                        <li>Has used programming langues C, C++, C#, Jave, Javascript, HTML, CSS, PHP, ASP.net, Python, and SQL</li>
+                    </ul>
                 </span>
                 <span class="text-white col-5 border border-white border-top-0 border-bottom-0 border-start-1 border-end-0">
                     <h3 class="text-secondary text-center">Responsibilities</h3>
@@ -86,8 +89,10 @@
                 </span>
             </div>
         </div>
-        <footer class="border border-white border-top-1 border-bottom-0 border-start-0 border-end-0">
-
+        
+        <footer class="border border-white border-top-1 border-bottom-0 border-start-0 border-end-0 d-flex justify-content-around align-items-center">
+            <a href="AS_Capstone.zip" class="text-white" download>Download Zip of Project</a>
+            <a href="#" class="text-white">Go To Git Hub Repo</a>
         </footer>
     </div>
 </body>
