--- a/proposal.html
+++ b/proposal.html
@@ -41,6 +41,11 @@
             <img class="border border-secondary border-3 my-2" src="images/AS Capstone Project Proposal/AS Capstone Project Proposal-1.png" alt="proposal" width="75%"/>
             <img class="border border-secondary border-3 my-2" src="images/AS Capstone Project Proposal/AS Capstone Project Proposal-2.png" alt="proposal" width="75%"/>
         </div>
+        
+        <footer class="border border-white border-top-1 border-bottom-0 border-start-0 border-end-0 d-flex justify-content-around align-items-center">
+            <a href="AS_Capstone.zip" class="text-white" download>Download Zip of Project</a>
+            <a href="#" class="text-white">Go To Git Hub Repo</a>
+        </footer>
     </div>
 </body>
 </html>
