--- a/prototype.html
+++ b/prototype.html
@@ -50,6 +50,11 @@
             <h2 id="imageLabel" class="text-white"><u>Login</u></h2>
             <button id="nextButton" class="btn btn-secondary text-white font-weight-bold">NEXT</button>
         </div>
+        
+        <footer class="border border-white border-top-1 border-bottom-0 border-start-0 border-end-0 d-flex justify-content-around align-items-center">
+            <a href="AS_Capstone.zip" class="text-white" download>Download Zip of Project</a>
+            <a href="#" class="text-white">Go To Git Hub Repo</a>
+        </footer>
     </div>
 </body>
 <script>
