--- a/erd.html
+++ b/erd.html
@@ -43,7 +43,7 @@
 
         <footer class="border border-white border-top-1 border-bottom-0 border-start-0 border-end-0 d-flex justify-content-around align-items-center">
             <a href="AS_Capstone.zip" class="text-white" download>Download Zip of Project</a>
-            <a href="#" class="text-white">Go To Git Hub Repo</a>
+            <a href="https://github.com/egreenri/AS_Capstone" class="text-white">Go To Git Hub Repo</a>
         </footer>
     </div>
 </body>
