--- a/finished.html
+++ b/finished.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="css/main.css">
+    
+    <style>
+        footer{
+            height: 75px;
+        }
+    </style>
 
     <title>Document</title>
 </head>
