--- a/proposal.html
+++ b/proposal.html
@@ -7,6 +7,12 @@
 
     <link rel="stylesheet" href="css/main.css">
 
+    <style>
+        footer{
+            height: 75px;
+        }
+    </style>
+
     <title>Document</title>
 </head>
 <body class="bg-primary h-100">
