--- a/finished.html
+++ b/finished.html
@@ -6,12 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="css/main.css">
-    
-    <style>
-        footer{
-            height: 75px;
-        }
-    </style>
 
     <title>Document</title>
 </head>
@@ -57,7 +51,7 @@
             <button id="nextButton" class="btn btn-secondary text-white font-weight-bold">NEXT</button>
         </div>
 
-        <footer class="border border-white border-top-1 border-bottom-0 border-start-0 border-end-0 d-flex justify-content-around align-items-center">
+        <footer class="border border-white border-top-1 border-bottom-0 border-start-0 border-end-0 d-flex justify-content-around align-items-center" style="height: 75px;">
             <a href="AS_Capstone.zip" class="text-white" download>Download Zip of Project</a>
             <a href="https://github.com/egreenri/AS_Capstone" class="text-white" target="_blank">Go To Git Hub Repo</a>
         </footer>
