--- a/proposal.html
+++ b/proposal.html
@@ -48,7 +48,7 @@
             <img class="border border-secondary border-3 my-2" src="images/AS Capstone Project Proposal/AS Capstone Project Proposal-2.png" alt="proposal" width="75%"/>
         </div>
 
-        <footer class="border border-white border-top-1 border-bottom-0 border-start-0 border-end-0 d-flex justify-content-around align-items-center">
+        <footer class="border border-white border-top-1 border-bottom-0 border-start-0 border-end-0 d-flex justify-content-around align-items-center" style="height: 75px;">
             <a href="AS_Capstone.zip" class="text-white" download>Download Zip of Project</a>
             <a href="https://github.com/egreenri/AS_Capstone" class="text-white" target="_blank">Go To Git Hub Repo</a>
         </footer>
