--- a/technicalDesign.html
+++ b/technicalDesign.html
@@ -7,12 +7,6 @@
 
     <link rel="stylesheet" href="css/main.css">
 
-    <style>
-        footer{
-            height: 75px;
-        }
-    </style>
-
     <title>Document</title>
 </head>
 <body class="bg-primary h-100">
@@ -50,7 +44,7 @@
             <img class="border border-secondary border-3 my-2" src="images/LRSE Service Manager Technical Document/LRSE Service Manager Technical Document-4.png" alt="proposal" width="75%"/>
         </div>
 
-        <footer class="border border-white border-top-1 border-bottom-0 border-start-0 border-end-0 d-flex justify-content-around align-items-center">
+        <footer class="border border-white border-top-1 border-bottom-0 border-start-0 border-end-0 d-flex justify-content-around align-items-center" style="height: 75px;">
             <a href="AS_Capstone.zip" class="text-white" download>Download Zip of Project</a>
             <a href="https://github.com/egreenri/AS_Capstone" class="text-white" target="_blank">Go To Git Hub Repo</a>
         </footer>
